--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/agiil/Tere-demo.git"
+    "url": "git+https://github.com/agiil/Diagnostika.git"
   },
   "keywords": [
     "eIDAS",
@@ -18,16 +18,14 @@
   "author": "Priit Parmakson",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/agiil/Tere-demo/issues"
+    "url": "https://github.com/agiil/Diagnostika/issues"
   },
-  "homepage": "https://github.com/agiil/Tere-demo",
+  "homepage": "https://github.com/agiil/Diagnostika",
   "dependencies": {
     "ejs": "^2.5.7",
     "express": "^4.16.2",
-    "libxmljs-mt": "^0.18.3",
     "moment": "^2.20.1",
     "request": "^2.83.0",
-    "saml2-js": "^2.0.1",
     "valid-url": "^1.0.9",
     "xml-crypto": "^0.10.1",
     "xml-encryption": "^0.11.0",
